# serializer version: 1
# name: test_get_consumption_data
  list([
    Energy(datetime=datetime.datetime(2022, 10, 22, 0, 0), delta_h=1.0, consumption_kwh=0.203, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
    Energy(datetime=datetime.datetime(2022, 10, 22, 1, 0), delta_h=1.0, consumption_kwh=0.163, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
  ])
# ---
# name: test_get_consumption_data_cache
  list([
    Energy(datetime=datetime.datetime(2022, 10, 22, 0, 0), delta_h=1.0, consumption_kwh=0.203, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
    Energy(datetime=datetime.datetime(2022, 10, 22, 1, 0), delta_h=1.0, consumption_kwh=0.163, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
  ])
# ---
# name: test_get_consumption_data_cache.1
  list([
    Energy(datetime=datetime.datetime(2022, 10, 22, 0, 0), delta_h=1.0, consumption_kwh=0.203, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
    Energy(datetime=datetime.datetime(2022, 10, 22, 1, 0), delta_h=1.0, consumption_kwh=0.163, surplus_kwh=0.0, generation_kwh=0.0, selfconsumption_kwh=0.0, real=True),
  ])
# ---
# name: test_get_contract_detail
  list([
    Contract(date_start=datetime.datetime(2022, 3, 9, 0, 0), date_end=datetime.datetime(2022, 10, 28, 0, 0), marketer='MARKETER', distributor_code='2', power=[4.4, 4.4]),
  ])
# ---
# name: test_get_max_power
  list([
    Power(datetime=datetime.datetime(2022, 3, 10, 14, 15), value_kw=2.436),
    Power(datetime=datetime.datetime(2022, 3, 14, 13, 15), value_kw=3.008),
    Power(datetime=datetime.datetime(2022, 3, 27, 10, 30), value_kw=3.288),
  ])
# ---
# name: test_get_supplies
  list([
    Supply(cups='ESXXXXXXXXXXXXXXXXTEST', date_start=datetime.datetime(2022, 3, 9, 0, 0), date_end=datetime.datetime(2022, 10, 28, 0, 0), address='-', postal_code='-', province='-', municipality='-', distributor='-', point_type=5, distributor_code='2'),
  ])
# ---
# name: test_get_supplies_empty_response
  list([
  ])
# ---
# name: test_get_supplies_malformed_response
  list([
  ])
# ---
# name: test_get_supplies_optional_fields_none
  list([
    Supply(cups='ESXXXXXXXXXXXXXXXXTEST', date_start=datetime.datetime(2022, 3, 9, 0, 0), date_end=datetime.datetime(2022, 10, 28, 0, 0), address=None, postal_code=None, province=None, municipality=None, distributor=None, point_type=5, distributor_code='2'),
  ])
# ---
# name: test_get_supplies_partial_response
  list([
    Supply(cups='ESXXXXXXXXXXXXXXXXTEST', date_start=datetime.datetime(2022, 3, 9, 0, 0), date_end=datetime.datetime(2022, 10, 28, 0, 0), address='-', postal_code='-', province='-', municipality='-', distributor='-', point_type=5, distributor_code='2'),
  ])
# ---
